Update .gitignore
Forgot to exclude `.idea`.