@@ -1,7 +1,6 @@
 package io.github.thecsdev.tcdcommons.util.io.http;
 
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.time.Duration;
 import java.time.Instant;
@@ -88,7 +87,7 @@ public final @Internal class TcdWebApi
 	 */
 	private static final URL safeURL(String url)
 	{
-		try { return URI.create(url).toURL(); }
+		try { return new URL(url); }
 		catch(MalformedURLException e) { throw new ExceptionInInitializerError(e); }
 	}
 	// --------------------------------------------------
